// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 100 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge spike after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 3687 ",
  "Fee: 3091 ",
  "Fee: 3044 ",
  "Fee: 3031 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 3000 ",
  "Fee: 108 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after day 1`] = `
Array [
  "Fee: 3000 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14783 ",
  "Fee: 14740 ",
]
`;

exports[`AlgebraBasePluginV1 #DynamicFeeManager #adaptiveFee single huge step after initialization 1`] = `
Array [
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 15000 ",
  "Fee: 14949 ",
  "Fee: 14906 ",
  "Fee: 14835 ",
  "Fee: 14728 ",
  "Fee: 14571 ",
  "Fee: 14243 ",
]
`;

exports[`AlgebraBasePluginV1 AlgebraBasePluginV1 external methods #changeFeeConfiguration feeConfig getter gas cost 1`] = `23713`;
